force-app/main/default/objects/Plan_Approval__c/Plan_Approval__c.object-meta.xml
<CustomObject>
    <description>Tracks approval workflow steps for incentive plan templates, including approver assignments, status, and escalation tracking.</description>
    <label>Plan Approval</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Plan Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>