force-app/main/default/objects/Plan_Approval__c/fields/Approval_Order__c.field-meta.xml
<CustomField>
    <fullName>Approval_Order__c</fullName>
    <description>The sequence order of this approval step.</description>
    <label>Approval Order</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>