force-app/main/default/objects/Plan_Approval__c/fields/Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Type__c</fullName>
    <description>The type of approval routing for this step.</description>
    <label>Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Serial</fullName>
            </value>
            <value>
                <fullName>Parallel</fullName>
            </value>
            <value>
                <fullName>Any_One</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>