force-app/main/default/objects/Plan_Approval__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <description>The user assigned as approver for this step.</description>
    <label>Approver</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Plan Approvals Assigned</relationshipLabel>
    <relationshipName>Plan_Approvals_Assigned</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>