force-app/main/default/objects/Plan_Approval__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Approver comments or feedback.</description>
    <label>Comments</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>