force-app/main/default/objects/Plan_Approval__c/fields/Decided_On__c.field-meta.xml
<CustomField>
    <fullName>Decided_On__c</fullName>
    <description>Date and time the approval decision was made.</description>
    <label>Decided On</label>
    <type>DateTime</type>
</CustomField>