force-app/main/default/objects/Plan_Approval__c/fields/Escalation_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Date__c</fullName>
    <description>Date and time when this approval step should be escalated.</description>
    <label>Escalation Date</label>
    <type>DateTime</type>
</CustomField>