force-app/main/default/objects/Plan_Approval__c/fields/Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Plan_Template__c</fullName>
    <description>The incentive plan template being approved.</description>
    <label>Plan Template</label>
    <type>Lookup</type>
    <referenceTo>Incentive_Plan_Template__c</referenceTo>
    <relationshipLabel>Plan Approvals</relationshipLabel>
    <relationshipName>Plan_Approvals</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>