force-app/main/default/objects/Plan_Approval__c/fields/Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Sent__c</fullName>
    <description>Indicates whether a reminder has been sent to the approver.</description>
    <label>Reminder Sent</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>