force-app/main/default/objects/Plan_Approval__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <description>The user who submitted this approval request.</description>
    <label>Submitted By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Plan Approvals Submitted</relationshipLabel>
    <relationshipName>Plan_Approvals_Submitted</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>